Update Klassement 3B MB

--- a/index.html
+++ b/index.html
@@ -98,13 +98,8 @@
 
                                 <div class="mbr-section-text">
                                     <p>... op de website toegewijd aan mijn favoriete hobby biljarten. <br>Je vindt hier
-                                        onder o.a. een korte biografie, mijn huidig klassement en palmares.<br>Naast
-                                        zelf biljart spelen geef ik biljartles en doe ik klein onderhoud van
-                                        biljartkeu's. &nbsp;</p>
+                                        onder o.a. een korte biografie, mijn huidig klassement en palmares.</p>
                                 </div>
-
-
-
                             </div>
                             <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size"
                                 style="width: 42%;">
@@ -163,14 +158,7 @@
                                         vrijspel. Ook in het kader, bandspel en het driebanden heb ik promotie mogen
                                         behalen. Je bent dus nooit te oud om nog bij te leren<br></p>
                                 </div>
-
-
-
                             </div>
-
-
-
-
                         </div>
                     </div>
                 </div>
@@ -202,7 +190,7 @@
                             <p><span style="font-size: 1rem; line-height: 1.5;">Vrijspel&nbsp; - &nbsp;ERE&nbsp;
                                     -&nbsp;&nbsp;400</span><br>Band &nbsp;- &nbsp;ERE &nbsp;- &nbsp;150<br>K47/2 &nbsp;-
                                 &nbsp;ERE &nbsp;- &nbsp;300<br>K47/1 &nbsp;- &nbsp;EXC &nbsp;- &nbsp;150<br>K71/2
-                                &nbsp;- &nbsp;EXC &nbsp;- &nbsp;200<br>3-Band &nbsp;- &nbsp;Exc &nbsp;- &nbsp;42</p><br>
+                                &nbsp;- &nbsp;EXC &nbsp;- &nbsp;200<br>3-Band &nbsp;- &nbsp;Hfd &nbsp;- &nbsp;50</p><br>
                             <p><br></p><br>
                             <p><br></p><br>
                             <p><br></p>
@@ -233,60 +221,8 @@
                     </div>
                 </div>
             </div>
-
-
-
-
         </div>
     </section>
-
-    <!--section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features1-7"
-        data-rv-view="11" style="background-image: url(assets/images/img-256-2000x1500.png);">
-
-
-
-        <div class="mbr-cards-row row striped">
-
-            <div class="mbr-cards-col col-xs-12 col-lg-6" style="padding-top: 40px; padding-bottom: 40px;">
-                <div class="container">
-                    <div class="card cart-block">
-
-                        <div class="card-block">
-                            <h4 class="card-title"><br><br>Biljartles</h4>
-
-                            <p class="card-text">Wil jij je biljartspel tot een hoger niveau brengen? Je algemeen
-                                gemiddelde opkrikken? Dan kan je bij mij terecht om je biljartspel wat bij te
-                                schaven.<br><br>Ik geloof dat een goede biljarter een brede kennis heeft van het
-                                biljartspel. Eveneens ben ik van het principe dat de lessen aangepast moeten zijn aan
-                                het niveau van de leerling.<br><br>Het spreekt voor zich dat ik het meeste bagage heb in
-                                de klassieke disciplines, maar ook in het driebanden heb ik de laatste jaren veel
-                                vouitgang geboekt
-                                en kan ik je wat vooruit helpen.<br><br>Ben je geïnteresseerd neem dan contact met me
-                                op.&nbsp;
-                                <br><br><br>
-                            </p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-             <div class="mbr-cards-col col-xs-12 col-lg-6" style="padding-top: 40px; padding-bottom: 40px;">
-                <div class="container">
-                    <div class="card cart-block">
-
-                        <div class="card-block">
-                            <h4 class="card-title"><br><br><br><br><br><br></h4>
-
-                            <p class="card-text">
-                                <img src="assets/images/100-2-1400x1863.jpg">
-                            </p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section-->
 
     <section class="mbr-footer footer4 mbr-section mbr-section-md-padding" id="contacts4-a" data-rv-view="14"
         style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
@@ -311,37 +247,6 @@
                         </div>
                     </div>
                 </div>
-                <!--div class="col-sm-4" data-form-type="formoid">
-                    <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true">Bedankt voor je bericht. Ik behandel je vraag zo
-                            vlug mogelijk.</div>
-                    </div>
-                    <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                        <input type="hidden"
-                            value="em7ix10k8P+orlOz/bwm5gUqPDLuXU011CU85YAnoE1Qi1NLWRp0vZMluUgpqyJuCPO9JjwAjxSHzbNE+gLwwf90DBS5qC+ewf77HrJxRUr6zkzHIyLdpmp2mwZ5Qkfn"
-                            data-form-email="true">
-                        <div class="form-group">
-                            <label class="form-control-label" for="contacts4-a-name">Name<span
-                                    class="form-asterisk">*</span></label>
-                            <input type="text" class="form-control input-sm input-inverse" name="name" required=""
-                                data-form-field="Name" id="contacts4-a-name">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-control-label" for="contacts4-a-email">Email<span
-                                    class="form-asterisk">*</span></label>
-                            <input type="email" class="form-control input-sm input-inverse" name="email" required=""
-                                data-form-field="Email" id="contacts4-a-email">
-                        </div>
-
-                        <div class="form-group">
-                            <label class="form-control-label" for="contacts4-a-message">Message</label>
-                            <textarea class="form-control input-sm input-inverse" name="message"
-                                data-form-field="Message" rows="4" id="contacts4-a-message"></textarea>
-                        </div>
-                        <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit"
-                                class="btn btn-sm btn-black">Verstuur</button></div>
-                    </form>
-                </div-->
             </div>
         </div>
     </section>
